external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_struct_fields_non_type_field.exp
error[E03004]: unbound type
  ┌─ tests/move_2024/parser/positional_struct_fields_non_type_field.move:4:23
  │
4 │     public struct Foo(Not a type)
  │                       ^^^ Unbound type 'Not' in current scope

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/positional_struct_fields_non_type_field.move:4:27
  │
4 │     public struct Foo(Not a type)
  │                           ^
  │                           │
  │                           Unexpected 'a'
  │                           Expected ','

