external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_struct_fields_non_type_field.move
module 0x42::M {
    // Invalid type inside a positional struct
    public struct Foo(Not a type)
}
